# exqudens-cpp-eval-conan-strings

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresetsTemplate.json  cmake-clean-export-all.sh  cmake-clean-export.sh  cmake-export.sh  cmake-full-clean-export-all.sh  cmake-full-clean-install-all.sh  cmake-full-clean-install.sh  cmake-install.sh  conan.cmake  readme.md
exqudens-cpp-eval-conan-strings-lib/: CMakeLists.txt  conanfile.py  config.cmake.in
exqudens-cpp-eval-conan-strings-package-test/: CMakeLists.txt  conanfile.py
exqudens-cpp-eval-conan-strings-package-test/src/test/cpp/: main.cpp
exqudens-cpp-eval-conan-strings-test/: CMakeLists.txt  conanfile.py
exqudens-cpp-eval-conan-strings-test/src/test/cpp/: main.cpp
exqudens-cpp-eval-conan-strings-test/src/test/cpp/exqudens/evaluation/: StringsTests.cpp  StringsTests.hpp
lib-exqudens-cpp-eval-conan-strings/: CMakeLists.txt  conanfile.py
library-eval-conan-strings/: CMakeLists.txt  conanfile.py
library-eval-conan-strings/src/main/cpp/exqudens/evaluation/: Strings.cpp  Strings.hpp
library-exqudens-cpp-eval-conan-strings/: CMakeLists.txt  conanfile.py
library-exqudens-cpp-eval-conan-strings/src/main/cpp/exqudens/evaluation/: Strings.cpp
package-test-exqudens-cpp-eval-conan-strings/: CMakeLists.txt  conanfile.py
test-eval-conan-strings/: CMakeLists.txt  conanfile.py
test-eval-conan-strings/src/test/cpp/: main.cpp
test-exqudens-cpp-eval-conan-strings/: CMakeLists.txt  conanfile.py
test-exqudens-cpp-eval-conan-strings/src/test/cpp/: main.cpp
test-exqudens-cpp-eval-conan-strings/src/test/cpp/exqudens/evaluation/: StringsTests.hpp
